# LegionSolvers

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Test01VectorArithmetic.sh  Test02CGLaplacian1D.sh  Test03COO1DPartitioning.sh  Test04CSR1DPartitioning.sh  Test05COO1DSolveGCExact.sh  TestCOO2D.sh  TestExecutable.sh  bench_all.py  bench_all_ls.py  build_dependencies.py  build_legion.py  build_legion_dependencies.py  build_legion_variants.py  build_utilities.py  make_all.py  refresh_cmake.py  refresh_cmake_directories.py  run_script.sh  tasks.hpp  test_all.py
benchmarks/petsc/: Makefile  main.cpp
benchmarks/trilinos/: CMakeLists.txt  main.cpp
build_kokkos_cuda/: CMakeLists.txt
build_kokkos_nocuda/: CMakeLists.txt
build_nokokkos_cuda/: CMakeLists.txt
build_nokokkos_nocuda/: CMakeLists.txt
scripts/: krylov.py
src/: .LegionSolversMapper.cpp.swp  .LinearAlgebraTasks.cu.swp  ._SquarePlanner.hpp  AbstractLinearOperator.hpp  AbstractMatrix.cpp  AbstractMatrix.hpp  AbstractVector.hpp  BiCGStabSolver.hpp  CGSSolver.hpp  CGSolver.hpp  COOMatrix.cpp  COOMatrix.hpp  COOMatrixTasks.cpp  COOMatrixTasks.cu  COOMatrixTasks.hpp  CSCMatrix.hpp  CSRMatrix.cpp  CSRMatrix.hpp  CSRMatrixTasks.cpp  CSRMatrixTasks.cu  CSRMatrixTasks.hpp  CUDAUtilities.cpp  CUDAUtilities.hpp  ConjugateGradientSolver.hpp  CuBLASHelpers.hpp  CuSPARSEHelpers.hpp  CudaLibs.cu  CudaLibs.hpp  DenseDistributedVector.hpp  DenseVector.hpp  DistributedCOOMatrix.hpp  DistributedVector.hpp  ExampleSystems.cpp  ExampleSystems.hpp  GMRESSolver.hpp  Initialize.cpp  Initialize.hpp  KokkosUtilities.hpp  LegionSolvers.hpp  LegionSolversMapper.cpp  (+51 more)
src_old/: CGSolver.hpp  COOMatrix.hpp  COOMatrixTasks.hpp  CSRMatrix.hpp  CSRMatrixTasks.hpp  DistributedCOOMatrix.hpp  ExampleSystems.hpp  LegionSolversMapper.hpp  LinearAlgebraTasks.hpp  LinearOperator.cpp  LinearOperator.hpp  Planner.hpp  SparseMatrix.hpp  SquarePlanner.hpp  TaskBaseClasses.hpp  TaskRegistration.hpp  Test01VectorArithmetic.cpp  Test05COO1DSolveCGExact.cpp  TestCOO2D.cpp  TestCSR1D.cpp  UtilityTasks.hpp
test/: BenchmarkStencil.cpp  Test01ScalarOperations.cpp  Test02VectorOperations.cpp  Test03COOPartitioning.cpp  Test06CSRSolveCG.cpp
